@@ -2,6 +2,10 @@ yle-dl - download videos from Yle servers
 Copyright 2009-2021 Antti Ajanki
 Distributed under the GPL v3
 
+<unreleased>
+
+- Support for new Svenska Arkivet URLs: https://svenska.yle.fi/a/
+
 Version 20210502
 
 - Fixed the support for yle.fi/uutiset video and audio
